# SmartStockAI

./: .gitignore
.github/workflows/: daily_ingestion.yml  monthly_company_sync.yml  weekly_financial_sync.yml
smartstock-backend/: .gitignore  DAILY_SYNC_GUIDE.md  DATABASE_OPTIMIZATION.md  DATABASE_QUERY_GUIDE.md  DATABASE_SCHEMA.md  DATA_INGESTION_PLAN.md  DATA_ISSUES_INVESTIGATION.md  DCF_OPTIMIZATION.md  DEDUPLICATION.md  EARNINGS_SURPRISES_DATA_REQUIREMENTS.md  ENV_SETUP.md  FMP_ENDPOINTS.md  GITHUB_ACTIONS_SETUP_GUIDE.md  LOGGING_GUIDE.md  MARKET_QUOTES_INGESTION.md  MIGRATION_SUMMARY.md  QUICK_START.md  QUICK_WRAP_UP_GUIDE.md  README.md  ROBUSTNESS_CHECKLIST.md  analyze_missing_earnings_data.py  main.py  models.py  pyproject.toml  query_database.py  requirements.txt  run_migration.py  test_analyst_annual_data.py  test_annual_estimates_api.py  test_consensus_endpoints.py  test_consensus_ingestion.py  test_earnings_income_match.py  test_earnings_period_analysis.py  test_earnings_surprises_ingestion.py  test_grades_endpoint.py  test_grades_ingestion.py  test_ingestion_direct.py  test_quarterly_estimates_api.py  test_ratings_endpoint.py  test_updated_periods.py  (+1 more)
smartstock-backend/agent/: __init__.py  graph.py  memory.py  state.py
smartstock-backend/data/: __init__.py  db_connection.py  document_loader.py  fetch_logger.py  financial_api.py  financial_statements_store.py  indexer.py  metrics_store.py  news_store.py  russel_2000_list.csv  russell_2000_tickers_clean.txt  sec_api.py  sync_logger.py  ticker_mapping.py  vector_store.py
smartstock-backend/data_mappings/: ANALYST_DATA_MAPPING.md  COMPANY_PROFILES_KEY_METRICS_MAPPING.md  FINANCIAL_DATA_MAPPING.md  OHLC_DATA_MAPPING.md
smartstock-backend/jobs/: __init__.py  news_archival.py  price_archival.py
smartstock-backend/migrations/: rename_earnings_data_to_earnings_surprises.sql
smartstock-backend/scripts/: check_stock_data.py  cleanup_historical_dcf.py  daily_sync.py  export_ohlc_to_csv.py  fetch_all_prices.py  fetch_all_sources.py  fetch_all_stock_data.py  fetch_premium_fmp_data.py  fetch_specific_stocks.py  fix_company_profiles_market_cap.py  get_russell_2000_list.py  ingest_all_dcf.py  ingest_analyst_data.py  ingest_company_profiles.py  ingest_earnings_surprises.py  ingest_financial_growth_metrics.py  ingest_financial_statements.py  ingest_market_data.py  ingest_market_quotes.py  ingest_russell_2000.py  migrate_key_metrics_categories.py  migrate_metric_categories.py  migrate_to_stock_prices.py  monitor_ingestion.py  run_indexer.py  test_data_quality.py  test_income_bulk.py  test_price_fetch.py  validate_data_quality.py  view_fetch_logs.py
smartstock-backend/tools/: __init__.py  comparison.py  earnings.py  price_news.py
smartstock-backend/utils/: __init__.py  error_handler.py  errors.py
smartstock-frontend/: FRONTEND_IMPROVEMENTS.md  package-lock.json  package.json  tailwind.config.ts
smartstock-frontend/.next/: trace
smartstock-frontend/app/: globals.css  layout.tsx  page.tsx
smartstock-frontend/components/: RichAgentResponse.tsx
(+20 files in other folders)
