[project]
name = "smartstock-backend"
version = "1.0.0"
description = "SmartStock AI - Agentic RAG Backend for Financial Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SmartStock AI Team" }
]
keywords = ["fastapi", "langchain", "rag", "finance", "ai"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "langchain-core>=1.1.3",
    "langgraph>=1.0.4",
    "langchain-openai>=1.1.1",
    "chromadb>=1.3.6",
    "sentence-transformers>=5.1.2",
    "aiosqlite>=0.21.0",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "httpx>=0.28.1",
    "unstructured>=0.18.21",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "sec-edgar-api>=1.1.0",
    "aiohttp>=3.13.2",
    "langchain-google-genai>=4.0.0",
    "finnhub-python>=2.4.26",
    "edgartools>=5.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
langchain = [
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
